--- a/app/views/layouts/messaging.html.erb
+++ b/app/views/layouts/messaging.html.erb
@@ -6,8 +6,8 @@
     <meta name="user_id" content="<%= current_user.id%>">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'messaging', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_include_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_include_tag 'messaging', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>  
     <%= render 'layouts/messaging_partials/side_menu'%>
@@ -15,7 +15,7 @@
       <%= yield %>
     </section>
   </body>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'%>
-  <%= javascript_pack_tag 'messaging', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag params[:controller], 'data-tubolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload'%>
+  <%= javascript_include_tag 'messaging', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag params[:controller], 'data-tubolinks-track': 'reload' %>
 </html>
